--- a/index.html
+++ b/index.html
@@ -903,11 +903,39 @@ Deep learning, computer vision
 	<div class="col-md-4">
 					<div class="blog">
 						<div class="blog-img">
+							<img class="img-responsive"  src="./img/blade.jpg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><a href="index.html#team">Callum</a></li>
+								<li><i class="fa fa-clock-o"></i>Summer 2023</li>
+							</ul>
+							<h3>Internship at Toshiba</h3>
+						<p>Callum worked with Tobisha Europe's <a href="https://www.toshiba.eu/pages/eu/Cambridge-Research-Laboratory/speech-technology">Speech Technology Group</a> at Cambridge this summer to explore the feasibility
+						of human-in-the-loop machine learning to classify turbine blade damage from images using dialogue. Paper in the pipeline. <i class="fa fa-file-text-o" style="color:Green;"></i>
+							 </p>
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->	
+
+
+		<!-- /blog -->
+						</div>	
+
+
+<div class="row">
+				<!-- blog -->		
+
+				<!-- blog -->
+	<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
 							<img class="img-responsive"  src="./img/rir.jpg" alt="">
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
-								<li><a href="index.html#team">Nina</a></li>
+								<li><a href="https://scholar.google.co.uk/citations?hl=en&user=dv1RKmIAAAAJ&view_op=list_works">Nina</a></li>
 								<li><i class="fa fa-clock-o"></i>Oct 2023</li>
 							</ul>
 							<h3>Innovation Network Grant</h3>
@@ -929,7 +957,7 @@ Deep learning, computer vision
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
-								<li><a href="https://scholar.google.co.uk/citations?user=kjWYrm4AAAAJ&hl=en">Joyjit</a></li>
+								<li><a href="index.html#team">Albert</a></li>
 								<li><i class="fa fa-clock-o"></i>October 2023</li>
 							</ul>
 							<h3>Congrats Albert! <i class="fa fa-trophy" style="color:Gold;"></i></h3>
@@ -949,7 +977,7 @@ Deep learning, computer vision
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
-								<li><a href="index.html#team">Nina</a></li>
+								<li><a href="https://scholar.google.co.uk/citations?hl=en&user=dv1RKmIAAAAJ&view_op=list_works">Nina</a></li>
 								<li><i class="fa fa-clock-o"></i>September 2023</li>
 							</ul>
 							<h3>SMARTER: Performance and reliability</h3>
