--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ Jon is leading applied dresearch on a Knowledge Transfer Partnership with Connex
 </ul>	
 <br>
 
-<h6>Dr Joyjit Chatterjee</h6>, Researcher 
+<h6>Dr Joyjit Chatterjee</h6>, Researcher & IT&D Data Scientist - Continuous Improvement,  at Reckitt
 <a href="mailto:J.Chatterjee-2018@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
 <a href="https://joyjitchatterjee.github.io/"><i class="fa fa-home"></i></a>
 <a href="https://scholar.google.co.uk/citations?user=kjWYrm4AAAAJ&hl=en"><i class="fa fa-google"></i></a>
@@ -920,13 +920,6 @@ Deep learning, computer vision
 				<!-- /blog -->	
 
 
-		<!-- /blog -->
-						</div>	
-
-
-<div class="row">
-				<!-- blog -->		
-
 				<!-- blog -->
 	<div class="col-md-4">
 					<div class="blog">
@@ -948,6 +941,13 @@ Deep learning, computer vision
 				</div>
 				<!-- /blog -->	
 
+		<!-- /blog -->
+						</div>	
+
+
+<div class="row">
+				<!-- blog -->		
+
 
 				<!-- blog -->
 	<div class="col-md-4">
@@ -967,7 +967,30 @@ Deep learning, computer vision
 						</div>
 					</div>
 				</div>
-				<!-- /blog -->	
+				<!-- /blog -->				
+				
+				
+				<!-- blog -->
+	<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<video width="370" controls>
+							  <source src="./img/How  do AIs understand text_ • Humber Science Festival Demo.mp4" type="video/mp4">
+							</video>
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><a href="index.html#team">Lydia</a></li>
+								<li><i class="fa fa-clock-o"></i>September 2023</li>
+							</ul>
+							<h3>Language at the Science Festival</h3>
+						<p>Lydia presented an amazing demo at this year's <a href="https://scifest.hull.ac.uk/">Humber Science Festival</a>
+						showing how modern AI models represent language in context. You can see different languages 
+						represented with an outer space touch...See Lydia's <a href="https://www.youtube.com/watch?v=zxHWQlejhNQ"> video</a> here.
+						</div>
+					</div>
+				</div>
+				<!-- /blog -->					
 
 				<!-- blog -->
 	<div class="col-md-4">
