--- a/index.html
+++ b/index.html
@@ -903,6 +903,25 @@ Deep learning, computer vision
 	<div class="col-md-4">
 					<div class="blog">
 						<div class="blog-img">
+							<img class="img-responsive"  src="./img/joy_cambridge.jpeg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><a href="https://scholar.google.co.uk/citations?user=kjWYrm4AAAAJ&hl=en">Joyjit</a></li>
+								<li><i class="fa fa-clock-o"></i>Nov 2023</li>
+							</ul>
+							<h3>Business at Cambridge</h3>
+						<p>Joyjit spent his <a href="https://twitter.com/bda_hull/status/1676602427548598272">Best International KE Initiative Award</a> fund learning about enterprise and business opportunities 
+						at the University of Cambridge, the <a href="https://www.ice.cam.ac.uk/">Institute of Continuous Learning (ICL)</a>. 
+							 </p>
+						</div>
+					</div>
+				</div>
+
+				<!-- blog -->
+	<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
 							<img class="img-responsive"  src="./img/blade.jpg" alt="">
 						</div>
 						<div class="blog-content">
