--- a/sustainability.html
+++ b/sustainability.html
@@ -98,6 +98,55 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
+							<h3>Towards AI for approximating hydrodynamic simulations as a 2D segmentation task.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Bryan-Smith, L.</a>,  
+								</li> 
+									<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Dethlefs, N.</a>
+								</li> 
+								<li>
+<!--								<a href="https://aclanthology.org/2023.clasp-1.11.pdf"><i class="fa fa-link"></i></a>Link</li>	-->
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+Traditional predictive simulations and remote sensing techniques for forecasting floods are based on
+fixed and spatially restricted physics-based models.
+These models are computationally expensive and
+can take many hours to run, resulting in predictions made based on outdated data. They are also
+spatially fixed, and unable to scale to unknown
+areas. By modelling the task as an image segmentation problem, an alternative approach using artificial intelligence to approximate the parameters
+of a physics-based model in 2D is demonstrated,
+enabling rapid predictions to be made in real-time.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2024 Northern Lights Deep Learning Conference, Tromso, Norway</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>																										
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->						
+					
+					<!-- publication entry -->
+
+						<div class="blog-content">
 							<h3>Intelligent digital twin -- machine learning system for real-time wind turbine wind speed and power generation forecasting.</h3>
 							<ul class="blog-meta">
 											<li>
