--- a/deep_learning.html
+++ b/deep_learning.html
@@ -110,7 +110,7 @@
 									<a href="index.html#team">Dethlefs, N.</a>
 								</li> 
 								<li>
-<!--								<a href="https://aclanthology.org/2023.clasp-1.11.pdf"><i class="fa fa-link"></i></a>Link</li>	-->
+								<a href="publications/BryanSmith-NLDL24.pdf"><i class="fa fa-link"></i></a>Link</li>
 							</ul>
 							<ul class="blog-meta">
 								<abstract style="display:inline" ;>
