--- a/index.html
+++ b/index.html
@@ -852,14 +852,14 @@ Artificial intelligence, machine learning, data analytics, robotics
 <br>
 <br>
 
-<h6>Eva Sousa</h6>, PhD student
+<h6>Dr Eva Sousa</h6>, PhD student, then Lecturer at DAIM/Uni Hull
 &nbsp;&nbsp;
 <a href="https://www.linkedin.com/in/evsousa/?originalSubdomain=pt"><i class="fa fa-linkedin-square" ></i></a>
 <br> Artificial intelligence, medical imaging
 <br>
 <br>
 
-<h6>Dr Luana Mincarelli</h6>, PhD student
+<h6>Dr Luana Mincarelli</h6>, PhD student, then at Istituto Zooprofilattico Sperimentale dell'Abruzzo e del Molise, Italy
 &nbsp;&nbsp;
 <a href="https://www.chemecolhull.com/luana-fiorella-mincarelli/"><i class="fa fa-home"></i></a>
 <a href="https://scholar.google.it/citations?user=TU1dLFsAAAAJ&hl=it"><i class="fa fa-google"></i></a>
