--- a/index.html
+++ b/index.html
@@ -895,6 +895,32 @@ Deep learning, computer vision
 					<h2 class="title">News & Activities</h2>
 				</div>
 				<!-- /Section header -->
+<div class="row">
+				<!-- blog -->		
+
+				<!-- blog -->
+	<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/xmas23-2.jpeg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><a href="index.html#team">BDA</a></li>
+								<li><i class="fa fa-clock-o"></i>Dec 2023</li>
+							</ul>
+							<h3>BDA Christmas Research Workshop 2023</h3>
+						<p>It's only 11 days left until our  <a href="publications/bda-research-2023.pdf">research workshop</a>. This year we celebrate 
+						with our own Charity Christmas tree, made by the <a href="https://www.hull.ac.uk/faculties/subjects/features/mechanical-engineering-facilities">FabLab</a> in <a href="https://pay.collctiv.com/advent-calendars-for-dove-house-hospice-16721?utm_source=collctiv&utm_medium=app">donation</a> to <a href="https://www.dovehouse.org.uk/">Dove House Hospice</a> (spot it in the picture). 	
+							 </p>
+						</div>
+					</div>
+				</div>
+
+
+		<!-- /blog -->
+						</div>	
+
 
 <div class="row">
 				<!-- blog -->		
