--- a/index.html
+++ b/index.html
@@ -464,7 +464,7 @@ multi-robot systems.</p>
 
 <h6>Dr Nina Dethlefs</h6>, Senior Lecturer &nbsp;&nbsp;
 <a href="mailto:n.dethlefs@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
-<a href="https://bda-hull.github.io/nina.html"><i class="fa fa-home"></i></a>
+<a href="https://www.hull.ac.uk/staff-directory/nina-dethlefs"><i class="fa fa-home"></i></a>
 <a href="https://scholar.google.com/citations?user=dv1RKmIAAAAJ&hl=en"><i class="fa fa-google"></i></a>
 <a href="https://www.linkedin.com/in/nina-dethlefs-17750486"><i class="fa fa-linkedin-square" ></i></a>
 <a href="https://github.com/ndethlefs"><i class="fa fa-git"></i></a>			
