--- a/index.html
+++ b/index.html
@@ -493,6 +493,103 @@ natural events such as floods. When I have time I do some research in digital co
 </ul>	
 <br>
 
+<h6>Dr Koorosh Aslansefat</h6>, Lecturer &nbsp;&nbsp;
+<a href="mailto:K.Aslansefat@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<a href="https://www.hull.ac.uk/staff-directory/koorosh-aslansefat"><i class="fa fa-home"></i></a>
+<a href="https://scholar.google.co.uk/citations?user=YBa4Tl8AAAAJ&hl=en"><i class="fa fa-google"></i></a>
+<a href="https://www.linkedin.com/in/koorosh-aslansefat"><i class="fa fa-linkedin-square" ></i></a>
+<a href="https://github.com/koo-ec"><i class="fa fa-git"></i></a>			
+<br> Artificial Intelligence Safety and Explainability, Data-driven Fault Detection, Diagnosis, and Prognosis
+<br>
+<ul class="blog-meta">
+<abstract style="display:inline" ;>
+<details close style="display:inline;">
+<summary>
+
+<span style="color:#6195FF">Full profile</span>
+</summary>
+<p>
+Koorosh Aslansefat is an Assistant Professor of Computer Science and a member of the Dependable Intelligent System Group (DEIS) in the University of Hull. He received M.Sc. degree in control engineering from Shahid Beheshti University, Tehran, Iran, in 2014. He got a fellowship with Grant No. 723764 for the EU H2020 project entitled: GO0D MAN (aGent Oriented Zero Defect Multi-stage mANufacturing) from 2016 to 2018. In 2018, he got a Studentship Award from EDF Energy R&D UK to do a PhD at the University of Hull and have an industrial collaboration with EDF Energy for a project entitled: DREAM (Data-driven Reliability-centred Evolutionary Automated Maintenance for Offshore Wind Farms). In his PhD career, he managed to get the IET Leslie H. Paddle Award for being an Outstanding Researcher for his work on Real-time dependability evaluation and the DREAM project.</p>
+
+<p>In 2021, he became a Research Associate and as a named researcher got a fellowship with Grant No. 101017258 for another EU H2020 project entitled: (SESAME) Safe MultiRobot Systems. In this position, he managed to get an Post-Doctoral Enrichment Award from the Alan Turing Institute for his innovative research on the safety evaluation of machine learning known as SafeML. Koorosh Aslansefat is internationally renowned for innovative research on the engineering of dependable systems that includes real-time dependability analysis of complex systems and safety assurance of machine learning algorithms. His main research interests are in artificial intelligence safety and explainability, Markov modelling, performance assessment, optimization, stochastic modelling, and runtime dependability evaluation.</p>
+</details>
+</abstract>
+</ul>	
+<br>
+
+<h6>Dr John Dixon</h6>, Lecturer &nbsp;&nbsp;
+<a href="mailto:John.Dixon@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<a href="https://www.hull.ac.uk/staff-directory/john-dixon"><i class="fa fa-home"></i></a>
+<a href="https://www.linkedin.com/in/john-dixon-4372385a/?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
+<br> Sensor networks, IoT, network protocols.
+<br>
+<ul class="blog-meta">
+<abstract style="display:inline" ;>
+<details close style="display:inline;">
+<summary>
+
+<span style="color:#6195FF">Full profile</span>
+</summary>
+<p>
+John Dixon is a versatile professional in the field of software development, with extensive experience as a software developer, software engineer, and software project manager. Currently, he serves as a digital projects consultant, researcher, lecturer, and is Programme Lead for Computer Science in the School of Computer Science.</p>
+
+<p>John has been actively involved in digital software development since 2005. His expertise extends to various domains, including Internet-connected software and services, web development, cloud services, networking, smart sensors, the Internet of Things, and distributed systems. He has a track record of successfully spearheading a range of projects, from small prototypes to multi-million-pound, multi-partner solutions, collaborating with organizations such as Sky UK, NHS, Smith & Nephew, Team GB, IBM, as well as government bodies, startups, charities, and smaller companies.</p>
+
+<p>Beyond his technical acumen, John brings invaluable software project management experience to the table. He has effectively managed and delivered projects with diverse themes, ranging from Artificial Intelligence and Machine Learning to Virtual/Augmented Reality and Data Science, as well as interdisciplinary projects involving other domains and disciplines. John is particularly interested in forging productive partnerships with businesses, public bodies, individuals, and institutions. He can work with you to help achieve your aims by, for example, developing winning funding bids, finding and supervising interns or associates (including Knowledge Transfer Partnerships), providing software architecture/design consultation, developing products, and delivering cutting-edge solutions.</p>
+
+<p>John also offers technical consultation and training services and has experience working with children, adults, businesses, and public bodies. Alongside his Computer Science expertise, Dr. Dixon has been a Company Director and is trained in leadership, governance, management, meeting facilitation, project planning, Agile project management, public speaking, teamwork, presentation, collaboration, and conflict resolution.</p>
+
+<p>At the University of Hull, Dr. Dixon currently holds a position as a lecturer, where he works with undergraduate, Masters, and PhD students. His educational role encompasses teaching, support, mentoring, and scholarship.</p>
+
+<p>Dr. Dixon is an alumnus of the University of Hull, having completed his Bachelors, Masters, and Doctoral studies there.</p>
+</details>
+</abstract>
+</ul>	
+<br>
+
+<h6>Dr Venkata Maruti Viswanath Gunturi</h6>, Lecturer &nbsp;&nbsp;
+<a href="mailto:V.Gunturi@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<a href="https://www.hull.ac.uk/staff-directory/venkata-maruti-gunturi"><i class="fa fa-home"></i></a>
+<a href="https://www.linkedin.com/in/venkata-m-viswanath-gunturi-508934a/?originalSubdomain=uk"><i class="fa fa-linkedin-square" ></i></a>
+<br> Geospatial Data Science, Spatio-temporal Data Mining, Sustainability, Graph Algorithms.
+<br>
+<ul class="blog-meta">
+<abstract style="display:inline" ;>
+<details close style="display:inline;">
+<summary>
+
+<span style="color:#6195FF">Full profile</span>
+</summary>
+<p>
+Dr Gunturi has over 10 years of experience in the area of Geospatial data science. He is interested in research problems which lie at the intersection of computer science and sustainability. He has experience in working with problems in the area of urban transportation and smart cities. His works are published in highly prestigious journals such as IEEE TKDE, GeoInformatica (Springer), Machine Learning (Springer) and IJGIS. His research work has been supported by both government (DST, India) and industry (Microsoft India).</p>
+</details>
+</abstract>
+</ul>	
+<br>
+
+<h6>Dr Xinhui Ma</h6>, Lecturer &nbsp;&nbsp;
+<a href="mailto:Xinhui.Ma@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
+<a href="https://www.hull.ac.uk/staff-directory/xinhui-ma"><i class="fa fa-home"></i></a>
+<a href="https://scholar.google.co.uk/citations?user=RPaRLW8AAAAJ&hl=en"><i class="fa fa-google"></i></a>		
+<br> Digtial Twin, Computer Graphics, Data Science, Machine Learning
+<br>
+<ul class="blog-meta">
+<abstract style="display:inline" ;>
+<details close style="display:inline;">
+<summary>
+
+<span style="color:#6195FF">Full profile</span>
+</summary>
+<p>
+Dr Ma's research areas lie in Visual Computing and Data Science. Particularly interested in Image Analysis, Digital Twin, Virtual Reality, Augmented Reality, Computer Graphics; Data Mining, Machine Learning.</p>
+<p>His expertise has applications in Digital Healthcare, Green Energy and Advanced Manufacturing. Dr Ma is a holder of Wellcome Trust Seed Award.</p>
+</details>
+</abstract>
+</ul>	
+<br>
+
+
+
 <h6>Dr Jon Carrick</h6>, Research and KTP Associate
 &nbsp;&nbsp;
 <a href="mailto:J.Carrick@hull.ac.uk"><i class="fa fa-envelope"></i></a> 
