--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@ Deep learning, natural language processing, dyslexia, language models.	<br><br>
 						<h4>PhD student</h4>						
 Natural language processing, AI, semiotics, memes.<br><br>
 <a href="mailto:V.SHERRATT-2020@hull.ac.uk"><i class="fa fa-envelope" style="font-size: 1.5em;"></i></a> 
-<a href="https://www.linkedin.com/in/victoria-em/k"><i class="fa fa-linkedin-square" style="font-size: 1.5em;" ></i></a>
+<a href="https://www.linkedin.com/in/victoria-em/"><i class="fa fa-linkedin-square" style="font-size: 1.5em;" ></i></a>
 					</div>
 				</div>
 				<!-- /about -->	
