--- a/deep_learning.html
+++ b/deep_learning.html
@@ -110,7 +110,8 @@
 									<a href="index.html#team">Dethlefs, N.</a>
 								</li> 
 								<li>
-								<a href="publications/BryanSmith-NLDL24.pdf"><i class="fa fa-link"></i></a>Link</li>
+								<a href="publications/BryanSmith-NLDL24.pdf"><i class="fa fa-cloud-download"></i></a>PDF</li>
+								<a href="https://proceedings.mlr.press/v233/bryan-smith24a/bryan-smith24a.pdf"><i class="fa fa-link"></i></a>Link</li>								
 							</ul>
 							<ul class="blog-meta">
 								<abstract style="display:inline" ;>
