--- a/publications.html
+++ b/publications.html
@@ -97,6 +97,48 @@
 					<div class="blog">
 <p>Complete list of our group and member's publications. Click tags to sort by topic.</p>
 
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
+							<h3>Scope Compliance Uncertainty Estimate Through Statistical Distance.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i>
+								Farhad, A., Sorokos, I., Akram, M.N. and
+								</li> 
+									<li>
+									<i class="fa fa-user"></i>
+									<a href="index.html#team">Aslansefat, K.</a>
+								</li> 
+								<li>	
+								<a href="https://link.springer.com/chapter/10.1007/978-3-031-53963-3_28"><i class="fa fa-link"></i></a>Link</li>								
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+The zeitgeist of the digital era has been dominated by an expanding integration of Artificial Intelligence (AI) in a plethora of applications across various domains. With this expansion, however, questions of the safety and reliability of these methods come have become more relevant than ever. SafeML is a model-agnostic approach for performing such monitoring, using distance measures based on statistical testing of the training and operational datasets; comparing them to a predetermined threshold, returning a binary value whether the model should be trusted in the context of the observed data or be deemed unreliable. Although a systematic framework exists for this approach, its performance is hindered by: (1) a dependency on a number of design parameters that directly affect the selection of a safety threshold and therefore likely affect its robustness, (2) an inherent assumption of certain distributions for the training and operational sets, as well as (3) a high computational complexity for relatively large sets. This work addresses these limitations by changing the binary decision to a continuous metric. Furthermore, all data distribution assumptions are made obsolete by implementing non-parametric approaches, and the computational speed increased by introducing a new distance measure based on the Empirical Characteristics Functions (ECF).
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2024 Future of Information and Communication Conference, Berlin, Germany</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+							</div>
+						</div>
+						<!-- blog tags -->
+
+						<!-- publication entry -->	
+
+
 					<!-- publication entry -->
 
 						<div class="blog-content">
