--- a/index.html
+++ b/index.html
@@ -278,6 +278,18 @@ AI for sustainability and environmental modelling. We are keen to collaborate wi
 			
 	<!-- Row -->
 			<div class="row">
+
+			<!-- about -->
+				<div class="col-md-4">
+					<div class="about">
+						<i class="fa fa-birthday-cake" style="color:LightSeaGreen;"></i>
+						<h3>EPSRC Centre for Doctoral Training in Offshore Wind Energy Sustainability and Resilience</h3>
+						<p>£5.8 <a href="https://auracdt.hull.ac.uk/empowering-future-makers-with-5-8million-funding-award/">EPSRC-funded CDT</a> with £12M industry funding for at least 65 PGR students. Led by Hull with 
+						partners Durham, loughborough and Sheffield.
+						<p><em>2024-32, Dethlefs (CI)</em></p>						
+					</div>
+				</div>
+				<!-- /about -->		
 			
 			<!-- about -->
 				<div class="col-md-4">
@@ -953,6 +965,25 @@ Deep learning, computer vision
 	<div class="col-md-4">
 					<div class="blog">
 						<div class="blog-img">
+							<img class="img-responsive"  src="./img/aura2.jpg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><a href="index.html#team">BDA</a></li>
+								<li><i class="fa fa-clock-o"></i>March 2024</li>
+							</ul>
+							<h3>CDT in Offshore Wind Sustainability and Resilience</h3>
+						<p>We co-lead a new <a href="https://auracdt.hull.ac.uk/empowering-future-makers-with-5-8million-funding-award/">EPSRC Centre for Doctoral Training in Offshore Wind Energy Sustainability and Resilience</a> with 
+						Durham, Loughborough and Sheffield. Looking forward to at least 65 new PGR students on cutting-edge solutions to OSW challenges and driving the UK’s transition to net zero.
+							 </p>
+						</div>
+					</div>
+				</div>
+
+				<!-- blog -->
+	<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
 							<img class="img-responsive"  src="./img/xmas23-2.jpeg" alt="">
 						</div>
 						<div class="blog-content">
@@ -967,6 +998,7 @@ Deep learning, computer vision
 						</div>
 					</div>
 				</div>
+										
 
 
 		<!-- /blog -->
