--- a/publications.html
+++ b/publications.html
@@ -101,6 +101,87 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
+							<h3>BDA at SemEval-2024 Task 4: Detection of Persuasion in Memes Across Languages with Ensemble Learning and External Knowledge.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i><a href="index.html#team">Sherratt, V., Dogan, S., Wuraola, I., Bryan-Smith, L., Onwuchekwa, O. and N. Dethlefs</a>
+								</li> 
+								<li>	
+								<a href="publications/[PRE-CAMERIA READY] Detection of Persuasion in Memes Across Languages with Ensemble Learning and External Knowledge.pdf"><i class="fa fa-link"></i></a>Link</li>								
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+This paper outlines our multimodal ensemble learning system for identifying persuasion tech- niques in memes. We contribute an approach which utilises the novel inclusion of consistent named visual entities extracted using Google Vision API’s as an external knowledge source, joined to our multimodal ensemble via late fu- sion. As well as detailing our experiments in ensemble combinations, fusion methods and data augmentation, we explore the impact of including external data and summarise post- evaluation improvements to our architecture based on analysis of the task results.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2024 SEMEVAL 2024 Shared Task on "Multilingual Detection of Persuasion Techniques in Memes", at the 
+								Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL), Mexico City, Mexico</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="nlp.html#publications">
+									<i class="fa fa-tag"></i>Natural Language Processing</a>	
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+							</div>
+						</div>
+						<!-- blog tags -->
+
+
+					<!-- publication entry -->
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
+							<h3>Towards Interactive Anomaly Detection using Natural Language.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i><a href="index.html#team">Rothon, C.</a>
+								Keizer, S., Doddipatla, R., and
+								</li> 
+									<li>
+									<i class="fa fa-user"></i><a href="index.html#team">N. Dethlefs</a>
+								</li> 
+								<li>	
+								<a href="publications/Interactive_Anomaly_Detection_using_NL__IWSDS_.pdf"><i class="fa fa-link"></i></a>Link</li>								
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+When training models for visual anomaly detection, typically, a dataset is collected and then annotated offline. Even if collecting raw data is relatively cheap, annotations are expensive, especially if they require human expertise. We therefore propose a novel interactive learning framework that combines active learning with natural language interaction to minimise the amount of annotated training data and allow for refined human expert feedback that may be leveraged in the learning pro- cess. In our initial experiments on wind turbine drone images, we demonstrate the effectiveness of active learning for anomaly detection when using ground truth la- bels, and assess the impact on learning when collecting labels from ‘experts’ versus ‘non-experts’ using our dialogue system. In addition to anomaly labels with confi- dence scores, we collect and analyse natural language explanations, which may be used to improve both anomaly detection performance and explainability.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2024 The 14th International Workshop on Spoken Dialogue Systems Technology, Sapporo, Japan</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="nlp.html#publications">
+									<i class="fa fa-tag"></i>Natural Language Processing</a>	
+								<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>																																			
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+							</div>
+						</div>
+						<!-- blog tags -->
+
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
 							<h3>Scope Compliance Uncertainty Estimate Through Statistical Distance.</h3>
 							<ul class="blog-meta">
 											<li>
