--- a/index.html
+++ b/index.html
@@ -981,6 +981,29 @@ Deep learning, computer vision
 				</div>
 
 				<!-- blog -->
+
+
+				<!-- blog -->
+	<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/semeval24.jpg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><a href="index.html#team">Vic, Sedat, Ifeoluwa, Lydia, KKC, Nina</a></li>
+								<li><i class="fa fa-clock-o"></i>February 2024</li>
+							</ul>
+							<h3>BDA at SemEval 2024 in Mexico 🇲🇽</h3>
+						<p>Some of us are off to <a href="https://2024.naacl.org/">NAACL in Mexico City</a> in June to present our <a href="publications/semeval-24-bda.pdf">BDA entry</a> 
+						on Detecting Persuasion in Memes Across Languages. We explore the effects of various sources of 
+						external knowledge and did really well on the <a href="https://propaganda.math.unipd.it/semeval2024task4/leaderboard.php">leaderboard</a>. <i class="fa fa-star" style="color:Orange;"></i>
+							 </p>
+						</div>
+					</div>
+				</div>
+
+				<!-- blog -->
 	<div class="col-md-4">
 					<div class="blog">
 						<div class="blog-img">
@@ -1040,7 +1063,7 @@ Deep learning, computer vision
 							</ul>
 							<h3>Internship at Toshiba</h3>
 						<p>Callum worked with Tobisha Europe's <a href="https://www.toshiba.eu/pages/eu/Cambridge-Research-Laboratory/speech-technology">Speech Technology Group</a> at Cambridge this summer to explore the feasibility
-						of human-in-the-loop machine learning to classify turbine blade damage from images using dialogue. Paper in the pipeline. <i class="fa fa-file-text-o" style="color:Green;"></i>
+						of human-in-the-loop machine learning to classify turbine blade damage from images using dialogue. Paper <a href="publications/Interactive_Anomaly_Detection_using_NL__IWSDS_.pdf">here</a>. <i class="fa fa-file-text-o" style="color:Green;"></i>
 							 </p>
 						</div>
 					</div>
