--- a/sustainability.html
+++ b/sustainability.html
@@ -95,6 +95,50 @@
 			<main class="section ">
 					<div class="blog">
 					
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
+							<h3>Towards Interactive Anomaly Detection using Natural Language.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i><a href="index.html#team">Rothon, C.</a>
+								Keizer, S., Doddipatla, R., and
+								</li> 
+									<li>
+									<i class="fa fa-user"></i><a href="index.html#team">N. Dethlefs</a>
+								</li> 
+								<li>	
+								<a href="publications/Interactive_Anomaly_Detection_using_NL__IWSDS_.pdf"><i class="fa fa-link"></i></a>Link</li>								
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+When training models for visual anomaly detection, typically, a dataset is collected and then annotated offline. Even if collecting raw data is relatively cheap, annotations are expensive, especially if they require human expertise. We therefore propose a novel interactive learning framework that combines active learning with natural language interaction to minimise the amount of annotated training data and allow for refined human expert feedback that may be leveraged in the learning pro- cess. In our initial experiments on wind turbine drone images, we demonstrate the effectiveness of active learning for anomaly detection when using ground truth la- bels, and assess the impact on learning when collecting labels from ‘experts’ versus ‘non-experts’ using our dialogue system. In addition to anomaly labels with confi- dence scores, we collect and analyse natural language explanations, which may be used to improve both anomaly detection performance and explainability.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2024 The 14th International Workshop on Spoken Dialogue Systems Technology, Sapporo, Japan</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="nlp.html#publications">
+									<i class="fa fa-tag"></i>Natural Language Processing</a>	
+								<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>																																			
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+							</div>
+						</div>
+						<!-- blog tags -->
+
+					<!-- publication entry -->							
+					
 					<!-- publication entry -->
 
 						<div class="blog-content">
