--- a/publications.html
+++ b/publications.html
@@ -101,6 +101,42 @@
 					<!-- publication entry -->
 
 						<div class="blog-content">
+							<h3>Redefining Digital Twins – A Wind Energy Operations and Maintenance Perspective.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i><a href="index.html#team">Tuton, E., Ma, X. and N. Dethlefs</a>
+								</li> 
+								<li>	
+								<a href="https://iopscience.iop.org/article/10.1088/1742-6596/2767/5/052001"><i class="fa fa-link"></i></a>Link</li>								
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+ Digital Twin (DT) technology has seen an explosion in popularity, with wind energy no exception. This is particularly true for Operations & Maintenance (O&M) applications. However, this expanded use has been accompanied by loose, conflicting, definitions that threaten to reduce the term to a buzzword and prevent the technology from meeting its full potential. A number of attempts have been made to better define and classify DTs, however, these either oversimplify the term or tighten criteria, leading to the exclusion of many DT applications. A new definition framework dubbed the Digital Twin Family Tree is therefore proposed. This widens "Digital Twin" to a general umbrella term for the technology, accompanied by specific definitions. DT Tags are also used to provide individualised characteristics for implementations. A sector-specific definition was devised for component and system monitoring and predictions in wind energy O&M dubbed a CS-DT and suitable DT Tags created. The proposed framework was used to review existing research in literature, demonstrating the potential for increased understanding, explainability, and accessibility of DTs for expert and non-expert stakeholders.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2024 J. Phys.: Conf. Ser. 2767 052001</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+								<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>	
+					<a href="deep_learning.html#publications">
+									<i class="fa fa-tag"></i>Deep Learning</a>
+							</div>
+						</div>
+						<!-- blog tags -->
+
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
 							<h3>BDA at SemEval-2024 Task 4: Detection of Persuasion in Memes Across Languages with Ensemble Learning and External Knowledge.</h3>
 							<ul class="blog-meta">
 											<li>
@@ -135,7 +171,6 @@ This paper outlines our multimodal ensemble learning system for identifying pers
 						<!-- blog tags -->
 
 
-					<!-- publication entry -->
 
 					<!-- publication entry -->
 
@@ -178,6 +213,7 @@ When training models for visual anomaly detection, typically, a dataset is colle
 						</div>
 						<!-- blog tags -->
 
+					<!-- publication entry -->
 
 					<!-- publication entry -->
 
