--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+f<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -527,7 +527,7 @@ multi-robot systems.</p>
 					<div class="circular--portrait"> <img src="img/nina.png"/> </div>
 					</br>
 						<h4>Dr Nina Dethlefs</h4>
-						<h4>Senior Lecturer</h4>						
+						<h4>Reader</h4>						
 Natural language processing, interactive systems, AI, deep learning.	<br><br>
 <a href="mailto:n.dethlefs@hull.ac.uk"><i class="fa fa-envelope" style="font-size: 1.5em;"></i></a> 
 <a href="https://www.hull.ac.uk/staff-directory/nina-dethlefs"><i class="fa fa-home" style="font-size: 1.5em;"></i></a>
