--- a/nlp.html
+++ b/nlp.html
@@ -95,6 +95,58 @@
 			<main class="section ">
 					<div class="blog">
 
+
+					<!-- publication entry -->
+
+						<div class="blog-content">
+							<h3>User Engagement Triggers in Social Media Discourse on Biodiversity Conservation.</h3>
+							<ul class="blog-meta">
+											<li>
+									<i class="fa fa-user"></i><a href="index.html#team">N. Dethlefs</a> and H. Cuayahuitl
+								</li> 
+								<li>	
+								<a href="https://dl.acm.org/doi/pdf/10.1145/3662685"><i class="fa fa-link"></i></a>Link</li>								
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+Studies in digital conservation have increasingly used social media in recent years as a source of data to understand the
+interactions between humans and nature, model and monitor biodiversity, and analyse online discourse about the conservation
+of species. Current approaches to digital conservation are for the most part purely frequentist, i.e. focused on easily trackable
+and quantiiable features, or purely qualitative, which allows a deeper level of interpretation, but is less scalable. Our approach
+aims to evaluate the applicability of recent advances in deep learning in combination with semi-automatic analysis. We present
+a multimodal neural learning framework that experiments with diferent combinations of linguistic and visual features and
+metadata of tweets to predict user engagement from a function of likes and retweets. Experimental results show that text is the
+single most efective modality for prediction when a large amount of training data is available. For smaller datasets, drawing
+information from multiple modalities can boost performance. Notably, we ind a negative efect of large pre-trained language
+models when dealing with substantially unbalanced datasets. A qualitative analysis into the triggers of user engagement
+with tweets reveals that it emerges from a combination of online discourse topic and sentiment, and is often ampliied by
+user activity, e.g. when content originates from an inluencer account. We ind clear evidence of existing sub-communities
+around speciic topics, including animal photography and sightings, illegal wildlife trade and trophy hunting, deforestation and
+destruction of nature and climate change and action in a broader sense. 
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2024 ACM Transactions on Social Computing</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="nlp.html#publications">
+									<i class="fa fa-tag"></i>Natural Language Processing</a>								
+								<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>	
+							</div>
+						</div>
+						<!-- blog tags -->
+
+
+					<!-- publication entry -->
+
 					<!-- publication entry -->
 
 						<div class="blog-content">
