--- a/index.html
+++ b/index.html
@@ -1889,7 +1889,7 @@ See details <a href="https://supergen-ore.net/projects/machine-learning-for-fati
 	<div class="col-md-4">
 					<div class="blog">
 						<div class="blog-img">
-							<img class="img-responsive"  src="./img/rb_ktp_tree.jpg" alt="">
+							<img class="img-responsive"  src="./img/rb-tree.jpg" alt="">
 						</div>
 						<div class="blog-content">
 							<ul class="blog-meta">
