--- a/index.html
+++ b/index.html
@@ -643,8 +643,8 @@ Artificial intelligence, wind turbines, green energy, natural language processin
 					<div class="about">
 					<div class="circular--portrait"> <img src="img/sbrl.jpeg"/> </div>					
 					</br>
-						<h4>Lydia Bryan-Smith</h4>
-						<h4>Experimental Officer, PhD Student</h4>						
+						<h4>Dr Lydia Bryan-Smith</h4>
+						<h4>Experimental Officer</h4>						
 Artificial intelligence, machine learning, environmental modelling, social media analysis.<br><br>
 <a href="mailto:L.Bryan-Smith-2014@hull.ac.uk"><i class="fa fa-envelope" style="font-size: 1.5em;"></i></a> 
 <a href="https://github.com/sbrl"><i class="fa fa-git" style="font-size: 1.5em;"></i></a
@@ -964,7 +964,28 @@ Deep learning, computer vision
 				
 <div class="row">
 				<!-- blog -->		
+				
+				<!-- blog -->
+	<div class="col-md-4">
+					<div class="blog">
+						<div class="blog-img">
+							<img class="img-responsive"  src="./img/lydia-phd.jpg" alt="">
+						</div>
+						<div class="blog-content">
+							<ul class="blog-meta">
+								<li><a href="index.html#team">Lydia</a></li>
+								<li><i class="fa fa-clock-o"></i>July 2024</li>
+							</ul>
+							<h3>Congratulations, Lydia! </h3>
+						<p>We're proud of Dr Lydia Bryan-Smith for passing her viva on the topic of
+						"Using Big Data and AI to Dynamically Predict Flood Risk", <a href="https://www.sciencedirect.com/science/article/pii/S0098300423001097">forecasting floods
+						from social media</a> and using <a href="https://proceedings.mlr.press/v233/bryan-smith24a.html">AI to tackle hydrodynamic simulations</a>. Well done!
+							 </p>
+						</div>
+					</div>
+				</div>
 
+				<!-- blog -->				
 
 				<!-- blog -->
 	<div class="col-md-4">
