--- a/nlp.html
+++ b/nlp.html
@@ -95,6 +95,65 @@
 			<main class="section ">
 					<div class="blog">
 
+					<!-- publication entry -->
+
+						<div class="blog-content">
+							<h3>Safety Monitoring for Large Language Models: A Case Study of Offshore Wind Maintenance .</h3>
+							<ul class="blog-meta">
+											<li> C. Walker, 
+									<i class="fa fa-user"></i><a href="index.html#team">C. Rothon</a>, 
+									<i class="fa fa-user"></i><a href="index.html#team">K. Aslansefat</a>, 
+									Y. Papadopoulos and <i class="fa fa-user"></i><a href="index.html#team">N. Dethlefs</a>
+								</li> 
+								<li>	
+								<a href="https://hull-repository.worktribe.com/preview/4734260/document%20%2822%29.pdf"><i class="fa fa-link"></i></a>Link</li>								
+							</ul>
+							<ul class="blog-meta">
+								<abstract style="display:inline" ;>
+									<details open style="display:inline;">
+										<summary>
+											<span style="color:#6195FF">Hide/Show Full Abstract</span>
+										</summary>
+It has been forecasted that a quarter of the world’s energy usage will be
+supplied from Offshore Wind (OSW) by 2050 (Smith 2023). Given that up to one
+third of Levelised Cost of Energy (LCOE) arises from Operations and Maintenance
+(O&M), the motive for cost reduction is enormous. In typical OSW farms hundreds
+of alarms occur within a single day, making manual O&M planning without automated systems costly and difficult. Increased pressure to ensure safety and high
+reliability in progressively harsher environments motivates the exploration of Artificial Intelligence (AI) and Machine Learning (ML) systems as aids to the task. We
+recently introduced a specialised conversational agent trained to interpret alarm
+sequences from Supervisory Control and Data Acquisition (SCADA) and recommend comprehensible repair actions (Walker et al. 2023). Building on recent advancements on Large Language Models (LLMs), we expand on this earlier work,
+fine tuning LLAMA (Touvron 2018), using available maintenance records from
+EDF Energy. An issue presented by LLMs is the risk of responses containing unsafe
+actions, or irrelevant hallucinated procedures. This paper proposes a novel framework for safety monitoring of OSW, combining previous work with additional safety
+layers. Generated responses of this agent are being filtered to prevent raw responses endangering personnel and the environment. The algorithm represents
+such responses in embedding space to quantify dissimilarity to pre-defined unsafe
+concepts using the Empirical Cumulative Distribution Function (ECDF). A second
+layer identifies hallucination in responses by exploiting probability distributions to
+analyse against stochastically generated sentences. Combining these layers, the approach finetunes individual safety thresholds based on categorised concepts,
+providing a unique safety filter. The proposed framework has potential to utilise the
+O&M planning for OSW farms using state-of-the-art LLMs as well as equipping
+them with safety monitoring that can increase technology acceptance within the
+industry.
+									</details>
+								</abstract>
+							</ul>
+							<ul class="blog-meta">
+								<li>2024 Proc. of the Safety Critical Systems Symposium SSS'24, Bristol, UK</li>
+							</ul>
+							<!-- blog tags -->
+							<div class="blog-tags">
+								<h5>Tags :</h5>
+					<a href="nlp.html#publications">
+									<i class="fa fa-tag"></i>Natural Language Processing</a>								
+								<a href="sustainability.html#publications">
+									<i class="fa fa-tag"></i>Sustainability</a>	
+							</div>
+						</div>
+						<!-- blog tags -->
+
+
+					<!-- publication entry -->
+
 
 					<!-- publication entry -->
 
